🖥 Update setup configuration with versioning and improved description for screentextz CLI tool

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,8 @@
 
 [metadata]
 name = screentextcli
-description = Add a short description here!
+version = 0.1.0
+description = screentextz: CLI tool to extract text from new images.
 author = nathfavour
 author_email = 116535483+nathfavour@users.noreply.github.com
 license = MIT
@@ -35,7 +36,7 @@ classifiers =
 
 [options]
 zip_safe = False
-packages = find_namespace:
+packages = find:
 include_package_data = True
 package_dir =
     =src
@@ -49,7 +50,7 @@ package_dir =
 # For more information, check out https://semver.org/.
 install_requires =
     importlib-metadata; python_version<"3.8"
-
+    # List dependencies if any
 
 [options.packages.find]
 where = src
@@ -72,8 +73,8 @@ testing =
 # console_scripts =
 #     script_name = screentextcli.module:function
 # For example:
-# console_scripts =
-#     fibonacci = screentextcli.skeleton:run
+console_scripts =
+    screentextz = screentextcli.skeleton:run
 # And any other entry points, for example:
 # pyscaffold.cli =
 #     awesome = pyscaffoldext.awesome.extension:AwesomeExtension
